# gwak-infer-demo

./: .gitignore  .gitmodules  local-infer.ipynb  pyproject.toml
